@@ -23,8 +23,7 @@ require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
 
 describe Task do
   before(:each) do
-    @valid_attributes = {
-    }
+    @valid_attributes = { :name => "Lorem ipsum", :user => mock_model(User) }
   end
 
   it "should create a new instance given valid attributes" do
