@@ -4,14 +4,21 @@ describe "/tasks/index.html.erb" do
   include TasksHelper
   
   before(:each) do
-    assigns[:tasks] = [
-      stub_model(Task),
-      stub_model(Task)
-    ]
+    assigns[:task] = mock_model(Task,
+      :name => "Lorem ipsum",
+      :user => mock_model(User),
+      :category => nil,
+      :due_at => nil
+    )
+    assigns[:tasks] = { :key => [ stub_model(Task), stub_model(Task) ] }
+    assigns[:current_user] = mock_model(User)
+    assigns[:due_date] = assigns[:category] = [[ :key, "value" ]]
+    Setting.stub!(:task_category_color).and_return({ :key => "value" })
+    Setting.stub!(:task_due_date).and_return({ :key => "value" })
   end
 
   it "should render list of tasks" do
-    render "/tasks/index.html.erb"
+    render "/tasks/index_pending.html.haml"
   end
 end
 
