@@ -5,14 +5,15 @@ describe "/tasks/new.html.erb" do
   
   before(:each) do
     assigns[:task] = stub_model(Task,
+      :uuid => "12345678-0123-5678-0123-567890123456",
       :new_record? => true
     )
   end
 
   it "should render new form" do
-    render "/tasks/new.html.erb"
+    render "/tasks/new.js.rjs"
     
-    response.should have_tag("form[action=?][method=post]", tasks_path) do
+    response.should include_text("Effect.toggle") do
     end
   end
 end
