@@ -1,3 +1,7 @@
+Mon, Feb 2, 2008
+---------------------------------------------------------------------
+- Updated task related controller and view specs.
+
 Sun, Feb 1, 2008
 ---------------------------------------------------------------------
 - SuperBowl!!
